# api-health-monitor

./: LICENSE  README.md
api-health-monitor-dashboard/: docker-compose.dev.yml
api-health-monitor-dashboard/backend/: .env  .gitignore  Dockerfile  pyproject.toml
api-health-monitor-dashboard/backend/api/: main.py
api-health-monitor-dashboard/backend/app/: config.py  main.py
api-health-monitor-dashboard/frontend/: .dockerignore  .gitignore
api-health-monitor-dashboard/frontend/api_monitor/: .env.production  README.md  package-lock.json  package.json  vue.config.js
api-health-monitor-dashboard/frontend/api_monitor/src/: App.vue
api-health-monitor-dashboard/frontend/api_monitor/src/components/: Footer.vue  Navbar.vue
api-health-monitor-dashboard/frontend/api_monitor/src/plugins/: vuetify.js
api-health-monitor-dashboard/frontend/api_monitor/src/router/: index.js
api-health-monitor-dashboard/frontend/api_monitor/src/views/: Dashboard.vue
apis/: .gitignore  docker-compose.yml
apis/api_1/: Dockerfile
apis/api_1/api/: main.py
apis/api_1/tests/: test_api_2.py
apis/api_2/: Dockerfile
apis/api_2/api/: main.py
apis/api_3/api/: main.py
apis/api_3/tests/: test_api_3.py
apis/api_4/: Dockerfile
apis/api_4/app/: main.py
apis/api_4/tests/: test_api_4.py
