[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ashish Parimoo <ashish.parimoo@rockwellcollins.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
