[tool.poetry]
name = "api_2"
version = "0.1.0"
description = ""
authors = ["Ashish Parimoo <ashish.parimoo@anptech.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create=true
in-project=true

